# lucy

./: .gitignore  pyproject.toml
.github/workflows/: pythonpackage.yml
lucy/: __init__.py  condition.py  cursor.py  expression.py  parsing.py  tree.py
lucyparser/: cursor.py  exceptions.py  parsing.py  tree.py  utils.py
pip-wheel-metadata/lucy-0.1.0.dist-info/: METADATA
tests/: test_lucy.py  test_parsing.py
