[tool.poetry]
name = "lucyparser"
version = "0.1.7"
description = "Lucene-like syntax parser"
authors = ["Timur <timur.makarchuk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
mypy = "^0.720.0"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
ipdb = "^0.12.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
